fix: added align items center

--- a/src/app/sp-calculator/sp-calculator.component.scss
+++ b/src/app/sp-calculator/sp-calculator.component.scss
@@ -137,6 +137,7 @@
       display: flex;
       padding: 44px 25px;
       justify-content: space-between;
+      align-items: center;
       &__total {
         color:#2F80ED;
         font-size: 24px;
